proteccion de rutas con jwt

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -30,7 +30,7 @@
 
             <button type="submit" class="btn" (click)="login()">Ingresar</button>
 
-            <button type="submit" class="google-btn">
+            <button type="submit" class="google-btn" (click)="googlelogin()">
                 <i class='bx bxl-google'></i>
                 <span>Ingresar con Google</span>
             </button>
