--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -42,8 +42,30 @@
 </head>
 <body>
     <div class="banner">
-        <div class="slider">
-            <div class="item"><img src="/assets/images/chancado1.png" alt=""></div>
+        <div class="slider" style="--quantity: 10">
+            <div class="item" style="--position: 1"><img src="/assets/images/chancado1.png" alt=""></div>
+            <div class="item" style="--position: 2"><img src="/assets/images/chancado3.png" alt=""></div>
+            <div class="item" style="--position: 3"><img src="/assets/images/chancado5.png" alt=""></div>
+            <div class="item" style="--position: 4"><img src="/assets/images/molienda1.png" alt=""></div>
+            <div class="item" style="--position: 5"><img src="/assets/images/molienda2.png" alt=""></div>
+            <div class="item" style="--position: 6"><img src="/assets/images/molienda3.png" alt=""></div>
+            <div class="item" style="--position: 7"><img src="/assets/images/flotacion3.png" alt=""></div>
+            <div class="item" style="--position: 8"><img src="/assets/images/flotacion6.png" alt=""></div>
+            <div class="item" style="--position: 9"><img src="/assets/images/espesamiento2.png" alt=""></div>
+            <div class="item" style="--position: 10"><img src="/assets/images/espesamiento3.png" alt=""></div>
+        </div>
+        <div class="content">
+            <h1 data-content="INFOPILOT">
+                INFOPILOT
+            </h1>
+            <div class="author">
+                <h2>PLANTA PILOTO</h2>
+                <p><b>Areas de Procesos</b></p>
+                <p>
+                    Informate y capacitate sobre procesos y normas de seguridad
+                </p>
+            </div>
+            <div class="model"></div>
         </div>
     </div>
 </body>
